--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ iframe{width:100%;height:80px;border:0;border-radius:12px}
     <header class="header">
       <div>
         <div class="hello">Hii,</div>
-        <div class="name" id="dearName">KuchuPuchu</div>
+        <div class="name" id="dearName">Liliput</div>
         <div class="sub">A little gift for you ✨</div>
       </div>
     </header><section class="grid">
@@ -141,34 +141,34 @@ iframe{width:100%;height:80px;border:0;border-radius:12px}
     <p style="margin:10px 2px 14px;color:var(--muted)">Songs dedicated to you</p>
     <div class="playlist">
       <div class="track">
-        <div class="cover"><img src="https://i.scdn.co/image/ab67616d0000b2739ed9c2cd1254f0a1b5b3f6b1" alt="cover"/></div>
+        <div class="cover"><img src="khushi3.jpg" alt="cover"/></div>
         <div>
-          <h4>If The World Was Ending</h4>
-          <small>JP Saxe, Julia Michaels</small>
-          <iframe style="margin-top:8px" src="https://open.spotify.com/embed/track/0Q5M4xG3K0OZzJZ5D2Rr1o?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+          <h4>Pretty Woman</h4>
+          <small>From Liliput</small>
+          <iframe style="margin-top:8px" src="https://open.spotify.com/embed/track/3rsx3pDYM3a08O0Yu3Tq6V?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </div>
       </div>
       <div class="track">
-        <div class="cover"><img src="https://i.scdn.co/image/ab67616d0000b273d88a0b395af8b7d2deb0f3b2" alt="cover"/></div>
+        <div class="cover"><img src="WhatsApp Image 2025-10-16 at 7.25.23 PM.jpeg" alt="cover"/></div>
         <div>
-          <h4>Die With A Smile</h4>
-          <small>Lady Gaga, Bruno Mars (example)</small>
-          <iframe style="margin-top:8px" src="https://open.spotify.com/embed/track/3S8jK1mGz3wO4Xmxv7Yb7W?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+          <h4>Tuzh Main Rab Dikhta Hai</h4>
+          <small>From Liliput</small>
+          <iframe style="margin-top:8px" src="https://open.spotify.com/embed/track/2LcXJP95e4HKydTZ2mYfrx?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </div>
       </div>
       <div class="track">
-        <div class="cover"><img src="https://i.scdn.co/image/ab67616d0000b2739a9f1b5b9d3a7f5e5d5a6a0a" alt="cover"/></div>
+        <div class="cover"><img src="WhatsApp Image 2025-10-16 at 7.25.24 PM.jpeg" alt="cover"/></div>
         <div>
-          <h4>Perfect</h4>
-          <small>Ed Sheeran</small>
-          <iframe style="margin-top:8px" src="https://open.spotify.com/embed/track/0tgVpDi06FyKpA1z0VMD4v?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+          <h4>Khoobsurat</h4>
+          <small>From Liliput</small>
+          <iframe style="margin-top:8px" src="https://open.spotify.com/embed/track/1o8YPl0hyGbpRcHplXNvsm?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<footer class="footer">Made with ❤ by <span id="fromName">Khushi</span></footer>
+<footer class="footer">Made with ❤ by <span id="fromName">Liliput</span></footer>
 
   </div>  <!-- Modal Letter -->  <div class="modal" id="letterModal" aria-hidden="true">
     <div class="paper">
@@ -177,12 +177,12 @@ iframe{width:100%;height:80px;border:0;border-radius:12px}
       <p class="msg">
 Hey Pasandida aurat you mean so much to me. Just one glimpse of you brightens my whole day. Your smile blooms like a flower, and when you don’t talk, everything feels incomplete. I’m sorry I’ll change myself, I promise I’ll never behave that way again. Please, be like you were before.Love you, my Pasandida Aurat. 💛
       </p>
-      <p class="sign">With all my love,<br>Yours sincerely, Khushi</p>
+      <p class="sign">With all my love,<br>Yours sincerely, Liliput</p>
     </div>
   </div>  <script>
     // Edit these quickly 🛠️
     const YOUR_PERSON_NAME = 'KuchuPuchu';
-    const FROM_NAME = 'Khushi';
+    const FROM_NAME = 'Liliput';
 
     document.getElementById('dearName').textContent = YOUR_PERSON_NAME;
     document.getElementById('fromName').textContent = FROM_NAME;
